<resources>
    <string name="app_name">ParkedFind</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
</resources>
